# Python

./: LICENSE  README.md  commands.txt  demo3.py
Christmas_Prompts/: promp_2.py  prompt.py  test.py
Demo/: Guessing_Game.py  Lists.py
Fake News Learning with ML/: data.csv  model.joblib  predict.py  train.py
Iterating Lists/: Calculate_sum  listsp1.py
Miscellaneous/Finding_in_Lists/: listpt4.py
Miscellaneous/Functions/: listpt6.py
Nested_lists/: listpt4.py
Nested_lists_2D/: listpt4.py
Nested_lists_3D/: listpt5.py
Python Project 6/: .gitignore  README.md  desktop.py  pyproject.toml  streamlit_app.py
Python Project 6/agent_core/: __init__.py  agent.py  evals.py  llm.py  tools.py
Python Project 6/apps/github_triage/: agent.py  cli.py  evals.py  tools.py
Python Project 6/apps/job_copilot/: agent.py  cli.py  tools.py
Python Project 6/apps/paper_digest/: agent.py  cli.py  tools.py
Python Project 6/tests/: test_job_copilot.py  test_paper_digest.py  test_tools.py
Python Project 6/ui/: _common.py  github_triage.py  home.py  job_copilot.py  paper_digest.py
Python Projects/: BMI_Calculator.py  Snake Game.py  christmas_prompt.py  variables.py
Python_CLI_Skeleton/: README.md  pyproject.toml
Python_CLI_Skeleton/tests/: test_cli.py
Python_project/: Guessing_Game.py
Python_projects/: BMI_Calculator.py  city_generator.py  data_types.py  password_generator.py  text_editor.py  tip_calculator.py  tips_calculator.py  user_input.py
Slicing/: listpt3.py  listsp3.py
Understand Lists/: listspt2.py
Vocabulary_quiz/: Vocabulary_list.csv  quiz.py
(+471 files in other folders)
