[project]
name = "ai-agents"
version = "0.1.0"
description = "Portfolio of Claude-powered agents: GitHub issue triage, job copilot, paper digest"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.45.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
github-triage = "apps.github_triage.cli:app"
job-copilot = "apps.job_copilot.cli:app"
paper-digest = "apps.paper_digest.cli:app"

[tool.ruff]
line-length = 100
target-version = "py39"
